<resources>
    <string name="app_name">Traveloka Hotel Ranking</string>
    <string name="image_desc">This is image traveloka</string>
    <string name="pin_maps">415m from</string>
    <string name="current_location">Current Location</string>
    <string name="type_room">/room/night</string>
    <string name="accommodations">Accommodations</string>
    <string name="near_you">Hotels Near You</string>
    <string name="hint_date">Wed, 4 May 2022</string>
    <string name="hint_night">1 Night</string>
    <string name="hint_people">1 Room, 1 Adult, 0 Children</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm password</string>
    <string name="search">Search</string>
    <string name="maps">Maps</string>
    <string name="minus_button">minus button for counting night</string>
    <string name="register">Register</string>
    <string name="register_google">Register with Google</string>
    <string name="have_traveloka_acc">Already have a Traveloka account?</string>
    <string name="login_now"><u>Login now</u></string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget password?</string>
    <string name="login_google">Login with Google</string>
    <string name="not_have_traveloka_acc">Don\'t have a Traveloka account?</string>
    <string name="register_now"><u>Register now</u></string>
    <string name="image_hotel_desc">This is hotel\'s images</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="location">Clementi, Singapore</string>
    <string name="company_name">Traveloka</string>
    <string name="impressive">Impressive</string>
    <string name="rate_with_number">8.5</string>
    <string name="rating_desc1">From</string>
    <string name="rating_desc2">reviews</string>
    <string name="total_rate">425</string>
    <string name="see_all_reviews">SEE ALL REVIEWS</string>
    <string name="title_location">Location</string>
    <string name="title_room_selection">Room Selection</string>
    <string name="guest">3 Guest(s)/room</string>
    <string name="bed">1 King Bed</string>
    <string name="food">Not Included</string>
    <string name="wifi">Free Wifi</string>
    <string name="see_detail">SEE DETAILS</string>
    <string name="price_discount"><strike>Rp 1.000.000</strike></string>
    <string name="select">Select</string>
    <string name="title_welcome_1">Hotel Optimized</string>
    <string name="desc_welcome_1">On the top of benefits, we have special feature to optimize hotel suggestions for you. Join us now!</string>
    <string name="img_welcome1">This is on boarding image 1, Optimized Hotel</string>
    <string name="img_welcome2">This is on boarding image 2, The right hotel</string>
    <string name="img_welcome3">This is on boarding image 3, The right hotel</string>
    <string name="title_welcome_2">The Right Hotel for You…</string>
    <string name="title_welcome_3">Various Rooms</string>
    <string name="desc_welcome_2">We recommend the best hotel for you</string>
    <string name="desc_welcome_3">A wide variety of hotel rooms are available</string>
    <string name="nav_next_onboarding">This is the Next button to go to the next slide of onboarding</string>
    <string name="nav_back_onboarding">This is the Back button to go to the back slide of onboarding</string>
    <string name="name_required">Name Required</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="mobile_number_required">Mobile Number Required</string>
    <string name="password_length">Minimum password length is 8 characters!</string>
    <string name="password_doesnt_match">Password doesn\'t match!</string>
    <string name="password_required">Password Required</string>
    <string name="skip">SKIP</string>
    <string name="additional_security">Note : This question is needed for the additional security. Don\'t share this!</string>
    <string name="answer_here">Answer here</string>
    <string name="required">Required</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="send">Send</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <string-array name="additional_security_entries">
        <item>Select Question :</item>
        <item>What\'s your Favorite Country?</item>
        <item>What\'s your Favorite Food?</item>
        <item>What\'s your Favorite Movie?</item>
    </string-array>

    <string name="text_night">Night</string>
    <string name="text_points">Points</string>
    <string name="text_maps">Maps</string>
    <string name="hotel_unavailable">Hotel Tidak Ditemukan</string>
    <string name="desc_hotel_unavailable">Coba cari dengan kata kunci lain atau pilih filter lain, ya.</string>

    <!-- Room List -->
    <string name="room_price_before_discount"><strike>%1s</strike></string>

    <!-- Detail Activity -->
    <string name="detail">Detail</string>
    <string name="king_bed">%1s King Bed</string>
    <string name="medium_bed">%1s Medium Bed</string>
    <string name="standard_bed">%1s Standard Bed</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="hotel_s_name">Hotel\'s name</string>

    <string name="text_top_hotel">Top hotel picks for you</string>
    <string name="text_other_hotel">Other Hotels</string>
    <string name="room_name">%1s Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_button">close button</string>
</resources>