<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.detail.DetailHotelActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/img_hotel"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/sample_image"
            android:scaleType="fitXY"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_hotel_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_img_hotel"
            android:layout_width="0dp"
            android:layout_height="100dp"
            tools:listitem="@layout/item_img_hotel"
            app:layout_constraintTop_toBottomOf="@id/img_hotel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/rv_img_hotel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RatingBar
            android:id="@+id/rb_rating_hotel"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:max="5"
            android:progressTint="@color/yellow"
            android:rating="2"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintStart_toStartOf="@+id/tv_title_hotel"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_hotel" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:text="@string/location"
            app:drawableStartCompat="@drawable/ic_pin_maps_gray"
            app:layout_constraintStart_toStartOf="@+id/rb_rating_hotel"
            app:layout_constraintTop_toBottomOf="@+id/rb_rating_hotel" />

        <View
            android:id="@+id/line_view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_location"
            app:layout_constraintStart_toStartOf="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <TextView
            android:id="@+id/tv_title_ratings_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/ratings_reviews"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/line_view1"
            app:layout_constraintStart_toStartOf="@id/line_view1"
            app:layout_constraintEnd_toEndOf="@id/line_view1" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_title_ratings_reviews"
            app:layout_constraintStart_toStartOf="@id/tv_title_ratings_reviews"
            app:layout_constraintEnd_toEndOf="@id/tv_title_ratings_reviews" />

        <TextView
            android:id="@+id/tv_rating_hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:drawablePadding="4dp"
            android:text="@string/rate_with_number"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_rating_traveloka"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company_name"/>

        <TextView
            android:id="@+id/tv_desc_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/impressive"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating_hotel"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_hotel"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_hotel" />

        <TextView
            android:id="@+id/tv_rating_desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/rating_desc1"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_rating"/>

        <TextView
            android:id="@+id/tv_count_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/total_rate"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating_desc1"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_desc1"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_desc1"/>

        <TextView
            android:id="@+id/tv_rating_desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rating_desc2"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_count_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_count_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_count_rating"/>

        <TextView
            android:id="@+id/tv_see_all_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all_reviews"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_desc2"/>

        <View
            android:id="@+id/line_view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_see_all_review"
            app:layout_constraintStart_toStartOf="@+id/tv_see_all_review"
            app:layout_constraintTop_toBottomOf="@+id/tv_see_all_review" />

        <TextView
            android:id="@+id/tv_title_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_location"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/line_view2"
            app:layout_constraintStart_toStartOf="@id/line_view2"
            app:layout_constraintEnd_toEndOf="@id/line_view2" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_location"
            app:layout_constraintStart_toStartOf="@id/tv_title_location"
            app:layout_constraintEnd_toEndOf="@id/tv_title_location"/>

        <TextView
            android:id="@+id/tv_title_room_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_room_selection"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/map_view"
            app:layout_constraintStart_toStartOf="@id/map_view"
            app:layout_constraintEnd_toEndOf="@id/map_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_room_selection"
            tools:listitem="@layout/item_room"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>